# wardenpy

./: .gitignore  README.md  app.py  args.py  db.py  encrpt.py  migrations.py  newapp.py  pyproject.toml  requirements.txt
.github/workflows/: code-quality.yml  python-app.yml
data/: .datadir
libwardenpy/: colors.py  configuration.py  db.py  funtionality.py  migrations.py  passgen.py
migrations/: 20241109071102_create_user_table.sql  20241109071443_create_password_table.sql  20241109071443_create_password_table.sql.sql
tests/: test_functionality.py  test_password_generation.py
