[project]
name = "wardenpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=43.0.3",
    "questionary>=2.0.1",
    "rich>=13.9.4",
    "typer>=0.13.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.389",
    "pytest-cov>=6.0.0",
    "pytest>=8.3.3",
    "pyinstaller>=6.11.1",
]
